src/app/styles/global.scss
@import 'mixins';
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'swiper/scss';
@import 'swiper/scss/navigation';

a,
.cp {
  cursor: pointer;
}

h1,
h2 {
  margin-bottom: 2rem;
}

body {
  background-color: #f1f4f5;
  &::-webkit-scrollbar,
  ::-webkit-scrollbar {
    width: 18px;
    &-track {
      background-color: transparent;
      // box-shadow: inset 0 0 5px #00a4b7;
    }
    &-thumb {
      width: 18px;
      border-radius: 13px;
      background-clip: padding-box;
      border: 5px solid transparent;
      background-color: #00a4b7;
    }
  }
}
.input-data {
  border: 2px solid #d6e1e3;
  border-radius: 10px;
  color: #154f5b;
  outline-color: #154f5b;
  &:focus {
    border-color: #154f5b;
  }
  @apply font-poppins focus:outline-none leading-6 bg-white font-normal text-base  py-3 pl-4 pr-3;
  &:disabled {
    @apply bg-veryLightGrey;
  }
}

.primary-button {
  background-image: linear-gradient(to right, #359cbb, #64c299);
  &:hover {
    background-image: linear-gradient(to right, #246a80, #10bd72);
  }
  &:disabled {
    opacity: 0.3 !important;
    @apply cursor-not-allowed;
  }
  @apply flex items-center justify-center h-12 rounded-full px-5 duration-500 text-white font-baloo;
}

.gray-button {
  background-color: #154f5b;
  border: 2px solid #154f5b;
  &:hover {
    color: #154f5b;
    @apply bg-white;
  }
  &:disabled {
    color: #fff !important;
    background-color: #d6e1e3 !important;
    border-color: #d6e1e3 !important;
    @apply cursor-not-allowed;
  }
  @apply flex items-center justify-center h-12 rounded-full px-5 duration-500 text-white font-baloo;
}
.google-button {
  color: #154f5b;
  border: 2px solid #154f5b;
  @apply bg-white;
  &:hover {
    background-color: #154f5b;
    @apply text-white;
  }
  &:disabled {
    color: #d6e1e3 !important;
    background-color: #fff !important;
    border-color: #d6e1e3 !important;
    @apply cursor-not-allowed;
  }
  @apply flex items-center justify-center h-12 rounded-full px-5 duration-500 font-baloo;
}

.secondary-button {
  border: solid 2px transparent;
  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
    linear-gradient(90deg, #359cbb, #64c299);
  background-clip: content-box, border-box;
  box-shadow: 2px 1000px 1px #fff inset;
  @apply bg-white bg-origin-border;
  &:hover {
    box-shadow: none;
    span {
      background: linear-gradient(90deg, white, white);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
    }
    svg {
      path {
        fill: white;
      }
    }
    @apply text-white;
  }
  &:disabled {
    color: #d6e1e3 !important;
    border-color: #d6e1e3 !important;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
      linear-gradient(90deg, white, white);
    span {
      background: linear-gradient(90deg, #d6e1e3, #d6e1e3);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
    }
    svg {
      path {
        fill: #d6e1e3;
      }
    }
    @apply cursor-not-allowed;
  }
  @apply flex items-center justify-center h-12 rounded-full px-5 duration-500 font-baloo;
  span {
    background: -webkit-linear-gradient(360deg, #359cbb, #64c299);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}
.noborder-button {
  background: -webkit-linear-gradient(360deg, #359cbb, #64c299);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  height: fit-content;
  &:hover {
    background: -webkit-linear-gradient(360deg, #246a80, #10bd72);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  &:disabled {
    color: #d6e1e3 !important;
    @apply cursor-not-allowed;
  }
  @apply font-baloo px-3 duration-500 cursor-pointer;
}

.custom-select {
  &-box {
    border: 2px solid #d6e1e3;
    border-radius: 8px;
    min-height: 3rem;
    &-valueContainer {
      width: calc(100% - 1.25rem);
    }
    &-chip {
      border: 1px solid #d6e1e3;
      border-radius: 8px;
      img {
        width: 10px;
      }
    }
  }
  &-placeholder {
    color: #a2a3af;
  }
  &-item {
    &:last-child {
      .custom-select-item-div {
        border-bottom: 0px !important;
      }
    }
  }
}

/* .calendar-1 {
  .datepicker-container {
    @apply w-full;
    input {
      border: 2px solid #d6e1e3;
      border-radius: 8px;
      color: #154f5b;
      @apply bg-white w-full py-3 px-4 focus:outline-none;
    }
    .calendar-container {
      z-index: 20 !important;
      top: calc(3rem + 4px) !important;
      // position: static !important;
      .top-container {
        padding: 16px 20px !important;
        justify-content: center !important;
        @apply relative flex;
        span {
          color: #154f5b;
          @apply font-medium;
        }
        .control {
          top: 22px;
          @apply absolute;
          path {
            fill: #154f5b !important;
          }
        }
        .prev-month {
          @apply left-0;
        }
        .next-month {
          margin-right: 20px;
          @apply right-0;
        }
      }
      .main-calendar-day-names {
        height: unset !important;
        border-width: 0px !important;
        .day-name-unit {
          color: #154f5b !important;
          font-size: 12px !important;
          @apply font-medium;
        }
      }
      .main-calendar-days {
        .day-unit {
          color: #154f5b !important;
          height: 42px !important;
          &:hover {
            background-image: linear-gradient(to right, #359cbb, #64c299) !important;
            color: #fff !important;
            opacity: 100% !important;
          }
        }
        .is-prev-month {
          opacity: 33%;
        }
        .is-selected {
          background-image: linear-gradient(to right, #359cbb, #64c299) !important;
          color: #fff !important;
        }
      }
    }
  }
} */
/* ... */

